--- a/URILinkParser/MainWindow.ui
+++ b/URILinkParser/MainWindow.ui
@@ -23,6 +23,9 @@
    <layout class="QGridLayout" name="gridLayout_2">
     <item row="3" column="0">
      <layout class="QGridLayout" name="gridLayout">
+      <item row="0" column="0">
+       <widget class="QLineEdit" name="URI"/>
+      </item>
       <item row="0" column="2">
        <widget class="QPushButton" name="breakURIIntoComponents">
         <property name="text">
@@ -30,11 +33,14 @@
         </property>
        </widget>
       </item>
-      <item row="0" column="0">
-       <widget class="QLineEdit" name="URI"/>
-      </item>
       <item row="1" column="0">
-       <widget class="QTableWidget" name="components"/>
+       <widget class="QTreeWidget" name="compTree">
+        <column>
+         <property name="text">
+          <string notr="true">1</string>
+         </property>
+        </column>
+       </widget>
       </item>
      </layout>
     </item>
